# shade-python

./: .gitignore  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
src/shade/: __init__.py  gateway.py
tests/: test_gateway.py
