[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shade"
version = "0.1.0"
authors = [
  { name="Shade Developer", email="developer@shdeprotocol.io" },
]
description = "A payment gateway system for Shade Protocol."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ShadeProtocol/shade-python"
Issues = "https://github.com/ShadeProtocol/shade-python/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
