[tool.poetry]
name = "shade"
version = "0.1.0"
description = "A payment gateway system for Shade Protocol."
authors = ["Shade Developer <developer@shdeprotocol.io>"]
readme = "README.md"
packages = [{include = "shade", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
stellar-sdk = "^13.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
flake8 = "^6.1.0"
black = "^23.7.0"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
